# sherlock

./: .gitignore  setup.cfg  setup.py
sherlock/: __main__.py
