[metadata]
name = sherlock
version      = attr: sherlock.sherlock.__version__
description  = 🔎 Hunt down social media accounts by username across social networks
long_description = file: README.md
long_description_content_type = text/markdown
license      = MIT
license_file = LICENSE
platforms    = any
classifiers  =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = sherlock
python_requires = >=3.6

[options.entry_points]
console_scripts =
    sherlock=sherlock.sherlock:main